# dl-core

./: .gitignore  README.md  TODO.md  plan.md  pyproject.toml
.github/workflows/: ci.yml  publish-testpypi.yml  publish.yml
readme/: README.md
readme/guide/: 1_getting_started.md  2_creating_an_experiment_repository.md  3_local_components_and_sweeps.md
readme/technical/: 1_configuration.md  2_entry_points.md  3_sweep_system.md  4_local_component_loading.md  5_testing.md
readme/tldr/: 1_install_and_verify.md  2_create_and_run_an_experiment.md
src/dl_core/: __init__.py  cli.py  component_describer.py  component_scaffold.py  dataset_inspect.py  init_experiment.py  init_extensions.py  migrate.py  project.py  single_run.py  smoke.py  sweep_scaffold.py  sync.py  worker.py
src/dl_core/accelerators/: __init__.py  cpu.py  multi_gpu.py  single_gpu.py
src/dl_core/analysis/: __init__.py  sweep_analyzer.py
src/dl_core/augmentations/: __init__.py  minimal.py  standard.py
src/dl_core/callbacks/: __init__.py  checkpoint.py  dataset_refresh.py  early_stopping.py  local_metric_tracker.py  metric_logger.py
src/dl_core/core/: __init__.py  adaptive_computation_trainer.py  base_accelerator.py  base_biometric_model.py  base_callback.py  base_criterion.py  base_dataset.py  base_detector.py  base_executor.py  base_metric.py  base_metric_manager.py  base_metrics_source.py  base_model.py  base_pad_model.py  base_sampler.py  base_tracker.py  base_trainer.py  base_transform.py  config_metadata.py  epoch_trainer.py  registry.py  sequence_trainer.py
src/dl_core/criterions/: __init__.py  bce_with_logits.py  crossentropy.py
src/dl_core/datasets/: __init__.py  standard.py
src/dl_core/executors/: __init__.py  local.py
src/dl_core/metric_managers/: __init__.py  standard_manager.py
src/dl_core/metrics/: __init__.py  accuracy.py  auc.py  f1.py  halt_steps.py
src/dl_core/metrics_sources/: __init__.py  local.py
src/dl_core/models/: __init__.py  resnet.py
src/dl_core/optimizers/: __init__.py
src/dl_core/samplers/: __init__.py  attack.py  label.py
src/dl_core/schedulers/: __init__.py  cosinewithwarmup.py
src/dl_core/sweep/: __init__.py  runner.py
src/dl_core/sweep/config/: __init__.py  config_builder.py  config_utils.py
src/dl_core/sweep/template/: __init__.py  template_loader.py  template_merger.py  template_validator.py  tracking_utils.py
src/dl_core/templates/: README.md  presets.yaml
src/dl_core/templates/base/: base.yaml  base_sweep.yaml
src/dl_core/templates/sweeps/: example_sweep.yaml
src/dl_core/trackers/: __init__.py  local.py
src/dl_core/trainers/: __init__.py  standard_trainer.py
src/dl_core/utils/: __init__.py  artifact_manager.py  checkpoint_utils.py  common.py  config.py  config_names.py  config_validator.py  distributed_utils.py  ema.py  runtime_utils.py  sweep_tracker.py
src/dl_core/utils/logging/: logger.py
tests/: conftest.py  test_checkpoint_behavior.py  test_checkpoint_utils.py  test_component_describer.py  test_component_scaffold.py  test_dataset_bases.py  test_dataset_cli.py  test_init_experiment.py  test_init_extensions.py  test_local_components.py  test_local_metric_tracker_callback.py  test_metric_pipeline.py  test_samplers.py  test_scaffold_smoke.py  test_sweep_runner.py  test_sync_cli.py  test_tracking_components.py  test_trainer_hierarchy.py
