[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dl-core"
version = "0.1.6"
description = "Reusable deep learning framework core."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "blazkowiz47", email = "sushrutpatwardhan@gmail.com" },
]
maintainers = [
    { name = "blazkowiz47", email = "sushrutpatwardhan@gmail.com" },
]
keywords = [
    "deep-learning",
    "machine-learning",
    "pytorch",
    "training",
    "sweeps",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "albumentations",
    "numpy",
    "opencv-python",
    "psutil",
    "pyyaml",
    "scikit-learn",
    "torch",
    "torchvision",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/Blazkowiz47/dl-core"
Documentation = "https://github.com/Blazkowiz47/dl-core/tree/main/readme"
Repository = "https://github.com/Blazkowiz47/dl-core"
Issues = "https://github.com/Blazkowiz47/dl-core/issues"

[project.scripts]
dl-core = "dl_core.cli:main"
dl-init-experiment = "dl_core.init_experiment:main"
dl-analyze-sweep = "dl_core.analysis.sweep_analyzer:main"
dl-run = "dl_core.single_run:main"
dl-sweep = "dl_core.sweep.runner:main"
dl-train-worker = "dl_core.worker:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dl_core"]
include = [
    "src/dl_core/templates/**/*.yaml",
    "src/dl_core/templates/**/*.md",
]
